<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_input"
        android:inputType="text" >
        
    </EditText>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time" >
            
        </TextView>
    	
	    <Spinner
	        android:id="@+id/startH"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/hours_array" >
	        
	    </Spinner>
	    
	    <Spinner
	        android:id="@+id/startCiv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/am_pm" >
	        
	    </Spinner>
    	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time" >
            
        </TextView>
	    
	    <Spinner
	        android:id="@+id/endH"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/hours_array" >
	        
	    </Spinner>
	    
	    <Spinner
	        android:id="@+id/endCiv"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/am_pm" >
	        
	    </Spinner>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_day" >
            
        </TextView>
        
        <Spinner
	        android:id="@+id/parkDay"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:entries="@array/days_array" >
	        
	    </Spinner>
	    
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/submit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/submit" >
	        
	    </Button>
	    
	</LinearLayout>

</LinearLayout>
